# rust-todolist

./: .env  Cargo.toml  docker-compose.yml
prisma/: schema.prisma
prisma/migrations/20241231062002_init/: migration.sql
src/: main.rs  prisma
src/api/: mod.rs  todo.rs
